# ai-portfolio

./: .gitignore  README.md  main.py  requirements.txt
capstones/capstone-1-churn-prediction/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
capstones/capstone-1-churn-prediction/.github/workflows/: ci.yml
capstones/capstone-1-churn-prediction/conf/: config.yaml
capstones/capstone-1-churn-prediction/infra/: main.tf  outputs.tf  variables.tf
capstones/capstone-1-churn-prediction/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
capstones/capstone-1-churn-prediction/monitoring/: drift.py  grafana-dashboard.json  prometheus.yml
capstones/capstone-1-churn-prediction/src/churn/: __init__.py  config.py  data.py  features.py  logging_conf.py  model.py  predict.py  train.py
capstones/capstone-1-churn-prediction/tests/: conftest.py  test_api.py  test_data.py  test_drift.py  test_pipeline.py
capstones/capstone-2-timeseries-forecast/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
capstones/capstone-2-timeseries-forecast/.github/workflows/: ci.yml
capstones/capstone-2-timeseries-forecast/conf/: config.yaml
capstones/capstone-2-timeseries-forecast/infra/: main.tf  outputs.tf  variables.tf
capstones/capstone-2-timeseries-forecast/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
capstones/capstone-2-timeseries-forecast/monitoring/: drift.py  grafana-dashboard.json  prometheus.yml
capstones/capstone-2-timeseries-forecast/src/forecast/: __init__.py  config.py  data.py  logging_conf.py  metrics.py  models.py  pipeline.py  predict.py  train.py
capstones/capstone-2-timeseries-forecast/tests/: conftest.py  test_api.py  test_data.py  test_drift.py  test_pipeline.py
capstones/capstone-3-cv-invoice-ocr/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
capstones/capstone-3-cv-invoice-ocr/.github/workflows/: ci.yml
capstones/capstone-3-cv-invoice-ocr/conf/: config.yaml
capstones/capstone-3-cv-invoice-ocr/infra/: main.tf  outputs.tf  variables.tf
capstones/capstone-3-cv-invoice-ocr/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
capstones/capstone-3-cv-invoice-ocr/monitoring/: drift.py  grafana-dashboard.json  prometheus.yml
capstones/capstone-3-cv-invoice-ocr/src/vision/: __init__.py  config.py  data.py  features.py  logging_conf.py  model.py  ocr.py  pipeline.py  predict.py  train.py
capstones/capstone-3-cv-invoice-ocr/tests/: conftest.py  test_api.py  test_data.py  test_pipeline.py
capstones/capstone-4-vietnamese-sentiment/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
capstones/capstone-4-vietnamese-sentiment/.github/workflows/: ci.yml
capstones/capstone-4-vietnamese-sentiment/conf/: config.yaml
capstones/capstone-4-vietnamese-sentiment/infra/: main.tf  outputs.tf  variables.tf
capstones/capstone-4-vietnamese-sentiment/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
capstones/capstone-4-vietnamese-sentiment/monitoring/: drift.py  grafana-dashboard.json  prometheus.yml
capstones/capstone-4-vietnamese-sentiment/src/nlpvi/: __init__.py  config.py  data.py  logging_conf.py  model.py  predict.py  train.py
capstones/capstone-4-vietnamese-sentiment/tests/: conftest.py  test_api.py  test_data.py  test_pipeline.py
capstones/capstone-5-rag-chatbot/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
capstones/capstone-5-rag-chatbot/.github/workflows/: ci.yml
capstones/capstone-5-rag-chatbot/conf/: config.yaml
capstones/capstone-5-rag-chatbot/infra/: main.tf  outputs.tf  variables.tf
capstones/capstone-5-rag-chatbot/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
capstones/capstone-5-rag-chatbot/monitoring/: drift.py  grafana-dashboard.json  prometheus.yml
capstones/capstone-5-rag-chatbot/src/ragbot/: __init__.py  config.py  data.py  embeddings.py  eval.py  llm.py  logging_conf.py  pipeline.py  retriever.py  store.py
capstones/capstone-5-rag-chatbot/tests/: conftest.py  test_api.py  test_data.py  test_drift.py  test_integration.py  test_pipeline.py
capstones/capstone-6-research-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
capstones/capstone-6-research-agent/.github/workflows/: ci.yml
capstones/capstone-6-research-agent/conf/: config.yaml
capstones/capstone-6-research-agent/infra/: main.tf  outputs.tf  variables.tf
capstones/capstone-6-research-agent/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
capstones/capstone-6-research-agent/monitoring/: drift.py  grafana-dashboard.json  prometheus.yml
capstones/capstone-6-research-agent/src/agent/: __init__.py  config.py  data.py  graph.py  llm.py  logging_conf.py  pipeline.py  predict.py  state.py  tools.py
capstones/capstone-6-research-agent/tests/: conftest.py  test_api.py  test_data.py  test_drift.py  test_pipeline.py  test_tools.py
capstones/capstone-7-mlops-platform/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
capstones/capstone-7-mlops-platform/.github/workflows/: cd.yml  ci.yml
capstones/capstone-7-mlops-platform/conf/: config.yaml
capstones/capstone-7-mlops-platform/infra/: main.tf  outputs.tf  variables.tf
capstones/capstone-7-mlops-platform/k8s/: configmap.yaml  cronjob.yaml  deployment.yaml  hpa.yaml  service.yaml
capstones/capstone-7-mlops-platform/monitoring/: drift.py  grafana-dashboard.json  prometheus.yml
capstones/capstone-7-mlops-platform/src/mlops/: __init__.py  config.py  data.py  features.py  logging_conf.py  model.py  predict.py  serve.py  train.py  validation.py
capstones/capstone-7-mlops-platform/tests/: conftest.py  test_api.py  test_data.py  test_drift.py  test_pipeline.py  test_registry.py  test_validation.py
(+380 files in other folders)
