[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capstone-2-timeseries-forecast"
version = "0.1.0"
description = "Vietnam retail-sales / stock-close time-series forecasting service."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ai-portfolio" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "prometheus-fastapi-instrumentator>=7.0",
    "mlflow>=2.11",
]

[project.optional-dependencies]
# Heavy / domain libs — imported lazily, never required for base import or tests.
ml = [
    "statsmodels>=0.14",
    "prophet>=1.1",
    "torch>=2.2",
]
serve = [
    "gunicorn>=21.2",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
forecast-train = "forecast.train:main"
forecast-predict = "forecast.predict:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "monitoring"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"monitoring/drift.py" = ["E402"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests requiring network/heavy optional deps (skipped by default run)",
]
