[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capstone-5-rag-chatbot"
version = "0.1.0"
description = "Production-grade RAG chatbot over internal SME documents (Vietnamese-friendly)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ai-portfolio" }]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Optional vector store backend (lazy import).
qdrant = ["qdrant-client>=1.9"]
# Optional semantic embeddings (lazy import).
st = ["sentence-transformers>=2.7"]
# Optional real RAGAS evaluation (offline RAGAS-style eval needs none of these).
ragas = ["ragas>=0.1", "datasets>=2.19"]
serve = ["gunicorn>=22.0"]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.scripts]
ragbot-ingest = "ragbot.pipeline:main"
ragbot-eval = "ragbot.eval:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "monitoring"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
markers = [
    "integration: tests requiring network, Ollama, Qdrant, or heavy optional deps",
]
