[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capstone-6-research-agent"
version = "0.1.0"
description = "Production-grade LangGraph-style research agent: plan -> tools -> cited answer."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ai-portfolio" }]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Heavy/optional libs are lazily imported so the base install stays light and
# offline tests stay green without them.
graph = ["langgraph>=0.2"]
llm = ["ollama>=0.3"]
search = ["tavily-python>=0.3"]
serve = ["gunicorn>=22.0"]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
agent-run = "agent.predict:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "monitoring"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
markers = [
    "integration: tests requiring network, langgraph, Ollama, or other optional deps",
]
